# llama-cpp-python

./: CHANGELOG.md  README.md  pyproject.toml
.github/workflows/: build-and-release.yaml  build-docker.yaml  build-wheels-cu130-win.yml  build-wheels-metal.yaml  publish-to-test.yaml  publish.yaml
docs/wiki/: SCHEMA.md  contributing-to-wiki.md  index.md
docs/wiki/core/: Llama.md
docs/wiki/modules/: LlamaCache.md  LlamaEmbedding.md  LlamaGrammar.md  LlamaSpeculative.md
llama_cpp/: __init__.py  _ggml.py  _internals.py  llama.py  llama_chat_format.py  llama_cpp.py  llama_grammar.py  llama_speculative.py  llama_types.py  mtmd_cpp.py
